--- a/Wallet.Web/Wallet.Web.csproj
+++ b/Wallet.Web/Wallet.Web.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Data\Entities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Wallet.Common\Wallet.Common.csproj" />
+  </ItemGroup>
+
 </Project>
