--- a/Wallet.Web/appsettings.json
+++ b/Wallet.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-DPS98VM\\SQLEXPRESS;Database=Wallet;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
